# rs-clone

./: .clangd  CMakeLists.txt  README.md  build-and-run.sh  fragment.fs  list.todo  main.cpp  texture.cpp  vertex.vs  vertex_data.cpp  vertex_data.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
res/data/: world.map
res/shaders/: fragment.fs  ground.fs
src/: linked_list.cpp  linked_list.h  main.cpp  map.cpp  map.h  player.cpp  player.h  shader.cpp  shader.h  texture.cpp  texture.h
